--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
         "test": "echo \"Error: no test specified\" && exit 1",
         "start": "node dist/server.js",
         "build": "tsc",
-        "procesar-estructura": "node scripts/procesar-estructura.js"
+        "procesar-estructura": "node scripts/procesar-estructura.js",
+        "postinstall": "python -m pip install -r plan_requirements.txt"
     },
     "keywords": [],
     "author": "",
