--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
         "test": "echo \"Error: no test specified\" && exit 1",
         "start": "node dist/server.js",
         "build": "tsc",
-        "procesar-estructura": "node scripts/procesar-estructura.js",
-        "postinstall": "$PYTHON_BIN -m pip install -r plan_requirements.txt"
+        "procesar-estructura": "node scripts/procesar-estructura.js"
     },
     "keywords": [],
     "author": "",
